--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,26 +1,43 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title><%= title %></title>
+
+<head>
+    <title>
+        <%= title %>
+    </title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
-  </head>
-  <body>
+</head>
+
+<body>
     <script src="https://code.jquery.com/jquery-3.1.0.min.js"></script>
     <script src='../javascripts/index.js'></script>
     <h1><%= title %></h1>
+
+
+    <ul class="notes">
+        <% for(var i=0; i<notes.length; i++) {%>
+            <li class="note">
+                <span><%= notes[i].title %></span>
+                <span><%= notes[i].body %></span>
+            </li>
+            <% } %>
+    </ul>
+
+
     <form id='addForm'>
-      Type Note in the Text Field to Add<br>
-      <input type="text" name="Note Text" id='addBox'>
-      <input type='submit' value='Add' />
+        Type Note in the Text Field to Add<br>
+        <input type="text" name="Note Text" id='addBox'>
+        <input type='submit' value='Add' />
     </form>
     <form id='editForm'>
-      Type Note in the Text Field to Add<br>
-      <input type="text" name="Note Text" id='editBox'>
-      <input type='submit' value='Edit' />
+        Type Note in the Text Field to Add<br>
+        <input type="text" name="Note Text" id='editBox'>
+        <input type='submit' value='Edit' />
     </form>
     <a href='javascript:void(0)' id='add'>Add Note</a>
     <div id='notes'>
 
     </div>
-  </body>
+</body>
+
 </html>
